Fixes the home hero container layout on mobile

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -10,7 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  font-weight: lighter;
+  font-weight: $font--light;
   color: white;
   -webkit-font-smoothing: subpixel-antialiased;
 
@@ -72,14 +72,19 @@
   right: 0;
 }
 
-@media screen and (max-width : 760px) {
+@media screen and (max-width : $responsive-break--mobile) {
   .hero {
-    background-size: auto 100%;
+    background-size: cover;
+    background-position: 30% 0%;
+  }
+
+  .hero-content .container {
+    width: 100%;
+    padding: 0 20px;
   }
 
   .hero-title {
     width: auto;
     position: relative;
-    bottom: -120px;
   }
 }
